--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "15.3.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "next": "^10.0.9",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "sass": "^1.32.8"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.1",
+    "typescript": "^4.2.3"
   }
 }
